kubernetes/13-registration-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: registration-service
  namespace: new-event
spec:
  replicas: 2
  selector:
    matchLabels:
      app: registration-service
  template:
    metadata:
      labels:
        app: registration-service
    spec:
      containers:
        - name: registration-service
          image: 790304250595.dkr.ecr.ap-southeast-1.amazonaws.com/registration-service:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 5002
          readinessProbe:
            httpGet:
              path: /ready
              port: 5002
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 5002
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: registration-service
  namespace: new-event
spec:
  selector:
    app: registration-service
  ports:
    - name: http
      port: 5002
      targetPort: 5002
  type: ClusterIP
