kubernetes/20-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-event-api-ingress
  namespace: new-event
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /event-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: event-service
                port:
                  number: 5000

          - path: /program-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: program-service
                port:
                  number: 5001

          - path: /registration-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: registration-service
                port:
                  number: 5002

          - path: /analytics-api(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: analytics-service
                port:
                  number: 5003

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: new-event-frontend-ingress
  namespace: new-event
spec:
  ingressClassName: nginx
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
